# khnm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
demo/: Dockerfile  docker-compose.yml
demo/demo/: main.py
src/khnm/: __init__.py  config.py  consumers.py  exceptions.py  main.py  pipelines.py  pipes.py  producers.py  serialization.py  time.py  types.py
tests/: conftest.py  doubles.py  test_consumers.py  test_pipelines.py  test_pipes.py  test_producers.py  test_serialization.py  utils.py
