[project]
name = "khnm"
version = "1.0.0"
description = "Micro-framework for implementing data pipelines over RabbitMQ"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.5.8",
    "pydantic>=2.12.5",
]

[project.scripts]
khnm = "khnm.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pika>=1.3.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "testcontainers>=4.14.0",
    "ty>=0.0.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]
pythonpath = ["src"]


[tool.hatch.build.targets.wheel]
packages = ["src/khnm"]
